[gd_scene load_steps=21 format=3 uid="uid://co8sht7awusk3"]

[ext_resource type="Script" uid="uid://ckro2528qolft" path="res://scripts/hub/hub_area.gd" id="1_jqmyt"]
[ext_resource type="Texture2D" uid="uid://bsbrv385xs173" path="res://assets/tiles/geodesic_tile.png" id="2_3eey1"]
[ext_resource type="PackedScene" uid="uid://drrgo5d2twgpc" path="res://scenes/npcs/lucy.tscn" id="3_klcw8"]
[ext_resource type="PackedScene" uid="uid://c1ndrllphg3la" path="res://scenes/npcs/chad.tscn" id="4_fnbpt"]
[ext_resource type="Texture2D" uid="uid://pr1spjt8ysq7" path="res://assets/tiles/floor-tile.png" id="5_jsnpf"]
[ext_resource type="PackedScene" uid="uid://bcjyag1lcgj2m" path="res://ui/hud/scanner_hud_debug.tscn" id="6_ax2ew"]
[ext_resource type="PackedScene" uid="uid://dui13bn8uxykg" path="res://scenes/scannables/minerals/default_test.tscn" id="7_bewwo"]
[ext_resource type="PackedScene" uid="uid://b04s46xuyyosa" path="res://ui/hud/communicator_display.tscn" id="8_07gug"]
[ext_resource type="Shader" uid="uid://dkqxf5xj8d165" path="res://shaders/starry.gdshader" id="9_espmy"]
[ext_resource type="PackedScene" uid="uid://cctwc6dkg5c7y" path="res://scenes/hub/teleport_pad.tscn" id="10_75c3g"]
[ext_resource type="PackedScene" uid="uid://bytuebitfyrl5" path="res://scenes/player/snaut.tscn" id="11_yox8q"]

[sub_resource type="SphereMesh" id="SphereMesh_0yvox"]
flip_faces = true
radius = 20.0
height = 20.0
is_hemisphere = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qssp3"]
albedo_texture = ExtResource("2_3eey1")
uv1_scale = Vector3(3, 3, 3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_eo1ym"]
data = PackedVector3Array(8.8168, 3.5, 12.1353, 0, 3.5, 15, 0, 2.1, 16, 9.4046, 2.1, 12.9443, 8.8168, 3.5, 12.1353, 0, 2.1, 16, 14.2658, 3.5, 4.6353, 8.8168, 3.5, 12.1353, 9.4046, 2.1, 12.9443, 15.2169, 2.1, 4.9443, 14.2658, 3.5, 4.6353, 9.4046, 2.1, 12.9443, 14.2658, 3.5, -4.6353, 14.2658, 3.5, 4.6353, 15.2169, 2.1, 4.9443, 15.2169, 2.1, -4.9443, 14.2658, 3.5, -4.6353, 15.2169, 2.1, 4.9443, 8.8168, 3.5, -12.1353, 14.2658, 3.5, -4.6353, 15.2169, 2.1, -4.9443, 9.4046, 2.1, -12.9443, 8.8168, 3.5, -12.1353, 15.2169, 2.1, -4.9443, 0, 3.5, -15, 8.8168, 3.5, -12.1353, 9.4046, 2.1, -12.9443, 0, 2.1, -16, 0, 3.5, -15, 9.4046, 2.1, -12.9443, -8.8168, 3.5, -12.1353, 0, 3.5, -15, 0, 2.1, -16, -9.4046, 2.1, -12.9443, -8.8168, 3.5, -12.1353, 0, 2.1, -16, -14.2658, 3.5, -4.6353, -8.8168, 3.5, -12.1353, -9.4046, 2.1, -12.9443, -15.2169, 2.1, -4.9443, -14.2658, 3.5, -4.6353, -9.4046, 2.1, -12.9443, -14.2658, 3.5, 4.6353, -14.2658, 3.5, -4.6353, -15.2169, 2.1, -4.9443, -15.2169, 2.1, 4.9443, -14.2658, 3.5, 4.6353, -15.2169, 2.1, -4.9443, -8.8168, 3.5, 12.1353, -14.2658, 3.5, 4.6353, -15.2169, 2.1, 4.9443, -9.4046, 2.1, 12.9443, -8.8168, 3.5, 12.1353, -15.2169, 2.1, 4.9443, 0, 3.5, 15, -8.8168, 3.5, 12.1353, -9.4046, 2.1, 12.9443, 0, 2.1, 16, 0, 3.5, 15, -9.4046, 2.1, 12.9443, 9.4046, 2.1, 12.9443, 0, 2.1, 16, 0, 0.7, 17, 9.9923, 0.7, 13.7533, 9.4046, 2.1, 12.9443, 0, 0.7, 17, 15.2169, 2.1, 4.9443, 9.4046, 2.1, 12.9443, 9.9923, 0.7, 13.7533, 16.168, 0.7, 5.2533, 15.2169, 2.1, 4.9443, 9.9923, 0.7, 13.7533, 15.2169, 2.1, -4.9443, 15.2169, 2.1, 4.9443, 16.168, 0.7, 5.2533, 16.168, 0.7, -5.2533, 15.2169, 2.1, -4.9443, 16.168, 0.7, 5.2533, 9.4046, 2.1, -12.9443, 15.2169, 2.1, -4.9443, 16.168, 0.7, -5.2533, 9.9923, 0.7, -13.7533, 9.4046, 2.1, -12.9443, 16.168, 0.7, -5.2533, 0, 2.1, -16, 9.4046, 2.1, -12.9443, 9.9923, 0.7, -13.7533, 0, 0.7, -17, 0, 2.1, -16, 9.9923, 0.7, -13.7533, -9.4046, 2.1, -12.9443, 0, 2.1, -16, 0, 0.7, -17, -9.9924, 0.7, -13.7533, -9.4046, 2.1, -12.9443, 0, 0.7, -17, -15.2169, 2.1, -4.9443, -9.4046, 2.1, -12.9443, -9.9924, 0.7, -13.7533, -16.168, 0.7, -5.2533, -15.2169, 2.1, -4.9443, -9.9924, 0.7, -13.7533, -15.2169, 2.1, 4.9443, -15.2169, 2.1, -4.9443, -16.168, 0.7, -5.2533, -16.168, 0.7, 5.2533, -15.2169, 2.1, 4.9443, -16.168, 0.7, -5.2533, -9.4046, 2.1, 12.9443, -15.2169, 2.1, 4.9443, -16.168, 0.7, 5.2533, -9.9924, 0.7, 13.7533, -9.4046, 2.1, 12.9443, -16.168, 0.7, 5.2533, 0, 2.1, 16, -9.4046, 2.1, 12.9443, -9.9924, 0.7, 13.7533, 0, 0.7, 17, 0, 2.1, 16, -9.9924, 0.7, 13.7533, 9.9923, 0.7, 13.7533, 0, 0.7, 17, 0, -0.7, 18, 10.5801, -0.7, 14.5623, 9.9923, 0.7, 13.7533, 0, -0.7, 18, 16.168, 0.7, 5.2533, 9.9923, 0.7, 13.7533, 10.5801, -0.7, 14.5623, 17.119, -0.7, 5.5623, 16.168, 0.7, 5.2533, 10.5801, -0.7, 14.5623, 16.168, 0.7, -5.2533, 16.168, 0.7, 5.2533, 17.119, -0.7, 5.5623, 17.119, -0.7, -5.5623, 16.168, 0.7, -5.2533, 17.119, -0.7, 5.5623, 9.9923, 0.7, -13.7533, 16.168, 0.7, -5.2533, 17.119, -0.7, -5.5623, 10.5801, -0.7, -14.5623, 9.9923, 0.7, -13.7533, 17.119, -0.7, -5.5623, 0, 0.7, -17, 9.9923, 0.7, -13.7533, 10.5801, -0.7, -14.5623, 0, -0.7, -18, 0, 0.7, -17, 10.5801, -0.7, -14.5623, -9.9924, 0.7, -13.7533, 0, 0.7, -17, 0, -0.7, -18, -10.5801, -0.7, -14.5623, -9.9924, 0.7, -13.7533, 0, -0.7, -18, -16.168, 0.7, -5.2533, -9.9924, 0.7, -13.7533, -10.5801, -0.7, -14.5623, -17.119, -0.7, -5.5623, -16.168, 0.7, -5.2533, -10.5801, -0.7, -14.5623, -16.168, 0.7, 5.2533, -16.168, 0.7, -5.2533, -17.119, -0.7, -5.5623, -17.119, -0.7, 5.5623, -16.168, 0.7, 5.2533, -17.119, -0.7, -5.5623, -9.9924, 0.7, 13.7533, -16.168, 0.7, 5.2533, -17.119, -0.7, 5.5623, -10.5801, -0.7, 14.5623, -9.9924, 0.7, 13.7533, -17.119, -0.7, 5.5623, 0, 0.7, 17, -9.9924, 0.7, 13.7533, -10.5801, -0.7, 14.5623, 0, -0.7, 18, 0, 0.7, 17, -10.5801, -0.7, 14.5623, 10.5801, -0.7, 14.5623, 0, -0.7, 18, 0, -2.1, 19, 11.1679, -2.1, 15.3713, 10.5801, -0.7, 14.5623, 0, -2.1, 19, 17.119, -0.7, 5.5623, 10.5801, -0.7, 14.5623, 11.1679, -2.1, 15.3713, 18.0701, -2.1, 5.8713, 17.119, -0.7, 5.5623, 11.1679, -2.1, 15.3713, 17.119, -0.7, -5.5623, 17.119, -0.7, 5.5623, 18.0701, -2.1, 5.8713, 18.0701, -2.1, -5.8713, 17.119, -0.7, -5.5623, 18.0701, -2.1, 5.8713, 10.5801, -0.7, -14.5623, 17.119, -0.7, -5.5623, 18.0701, -2.1, -5.8713, 11.1679, -2.1, -15.3713, 10.5801, -0.7, -14.5623, 18.0701, -2.1, -5.8713, 0, -0.7, -18, 10.5801, -0.7, -14.5623, 11.1679, -2.1, -15.3713, 0, -2.1, -19, 0, -0.7, -18, 11.1679, -2.1, -15.3713, -10.5801, -0.7, -14.5623, 0, -0.7, -18, 0, -2.1, -19, -11.1679, -2.1, -15.3713, -10.5801, -0.7, -14.5623, 0, -2.1, -19, -17.119, -0.7, -5.5623, -10.5801, -0.7, -14.5623, -11.1679, -2.1, -15.3713, -18.0701, -2.1, -5.8713, -17.119, -0.7, -5.5623, -11.1679, -2.1, -15.3713, -17.119, -0.7, 5.5623, -17.119, -0.7, -5.5623, -18.0701, -2.1, -5.8713, -18.0701, -2.1, 5.8713, -17.119, -0.7, 5.5623, -18.0701, -2.1, -5.8713, -10.5801, -0.7, 14.5623, -17.119, -0.7, 5.5623, -18.0701, -2.1, 5.8713, -11.1679, -2.1, 15.3713, -10.5801, -0.7, 14.5623, -18.0701, -2.1, 5.8713, 0, -0.7, 18, -10.5801, -0.7, 14.5623, -11.1679, -2.1, 15.3713, 0, -2.1, 19, 0, -0.7, 18, -11.1679, -2.1, 15.3713, 11.1679, -2.1, 15.3713, 0, -2.1, 19, 0, -3.5, 20, 11.7557, -3.5, 16.1803, 11.1679, -2.1, 15.3713, 0, -3.5, 20, 18.0701, -2.1, 5.8713, 11.1679, -2.1, 15.3713, 11.7557, -3.5, 16.1803, 19.0211, -3.5, 6.1803, 18.0701, -2.1, 5.8713, 11.7557, -3.5, 16.1803, 18.0701, -2.1, -5.8713, 18.0701, -2.1, 5.8713, 19.0211, -3.5, 6.1803, 19.0211, -3.5, -6.1803, 18.0701, -2.1, -5.8713, 19.0211, -3.5, 6.1803, 11.1679, -2.1, -15.3713, 18.0701, -2.1, -5.8713, 19.0211, -3.5, -6.1803, 11.7557, -3.5, -16.1803, 11.1679, -2.1, -15.3713, 19.0211, -3.5, -6.1803, 0, -2.1, -19, 11.1679, -2.1, -15.3713, 11.7557, -3.5, -16.1803, 0, -3.5, -20, 0, -2.1, -19, 11.7557, -3.5, -16.1803, -11.1679, -2.1, -15.3713, 0, -2.1, -19, 0, -3.5, -20, -11.7557, -3.5, -16.1803, -11.1679, -2.1, -15.3713, 0, -3.5, -20, -18.0701, -2.1, -5.8713, -11.1679, -2.1, -15.3713, -11.7557, -3.5, -16.1803, -19.0211, -3.5, -6.1803, -18.0701, -2.1, -5.8713, -11.7557, -3.5, -16.1803, -18.0701, -2.1, 5.8713, -18.0701, -2.1, -5.8713, -19.0211, -3.5, -6.1803, -19.0211, -3.5, 6.1803, -18.0701, -2.1, 5.8713, -19.0211, -3.5, -6.1803, -11.1679, -2.1, 15.3713, -18.0701, -2.1, 5.8713, -19.0211, -3.5, 6.1803, -11.7557, -3.5, 16.1803, -11.1679, -2.1, 15.3713, -19.0211, -3.5, 6.1803, 0, -2.1, 19, -11.1679, -2.1, 15.3713, -11.7557, -3.5, 16.1803, 0, -3.5, 20, 0, -2.1, 19, -11.7557, -3.5, 16.1803, 8.8168, 3.5, 12.1353, 0, 3.5, 0, 0, 3.5, 15, 14.2658, 3.5, 4.6353, 0, 3.5, 0, 8.8168, 3.5, 12.1353, 14.2658, 3.5, -4.6353, 0, 3.5, 0, 14.2658, 3.5, 4.6353, 8.8168, 3.5, -12.1353, 0, 3.5, 0, 14.2658, 3.5, -4.6353, 0, 3.5, -15, 0, 3.5, 0, 8.8168, 3.5, -12.1353, -8.8168, 3.5, -12.1353, 0, 3.5, 0, 0, 3.5, -15, -14.2658, 3.5, -4.6353, 0, 3.5, 0, -8.8168, 3.5, -12.1353, -14.2658, 3.5, 4.6353, 0, 3.5, 0, -14.2658, 3.5, -4.6353, -8.8168, 3.5, 12.1353, 0, 3.5, 0, -14.2658, 3.5, 4.6353, 0, 3.5, 15, 0, 3.5, 0, -8.8168, 3.5, 12.1353, 0, -3.5, 20, 0, -3.5, 0, 11.7557, -3.5, 16.1803, 11.7557, -3.5, 16.1803, 0, -3.5, 0, 19.0211, -3.5, 6.1803, 19.0211, -3.5, 6.1803, 0, -3.5, 0, 19.0211, -3.5, -6.1803, 19.0211, -3.5, -6.1803, 0, -3.5, 0, 11.7557, -3.5, -16.1803, 11.7557, -3.5, -16.1803, 0, -3.5, 0, 0, -3.5, -20, 0, -3.5, -20, 0, -3.5, 0, -11.7557, -3.5, -16.1803, -11.7557, -3.5, -16.1803, 0, -3.5, 0, -19.0211, -3.5, -6.1803, -19.0211, -3.5, -6.1803, 0, -3.5, 0, -19.0211, -3.5, 6.1803, -19.0211, -3.5, 6.1803, 0, -3.5, 0, -11.7557, -3.5, 16.1803, -11.7557, -3.5, 16.1803, 0, -3.5, 0, 0, -3.5, 20)

[sub_resource type="PlaneMesh" id="PlaneMesh_w6xti"]
size = Vector2(50, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7wvbm"]
albedo_color = Color(0.827451, 1, 1, 1)
albedo_texture = ExtResource("5_jsnpf")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bfqb0"]
points = PackedVector3Array(-25, 0, -25, -25, 0, 25, 25, 0, -25, 25, 0, 25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ffi3l"]
shader = ExtResource("9_espmy")
shader_parameter/sky_color = Color(0.03, 0.05, 0.11, 1)
shader_parameter/star_base_color = Color(0.8, 1, 0.3, 1)
shader_parameter/star_hue_offset = 0.6
shader_parameter/star_intensity = 0.08
shader_parameter/star_twinkle_speed = 0.8
shader_parameter/star_twinkle_intensity = 0.2
shader_parameter/layer_scale = 20.0
shader_parameter/layer_scale_step = 10.0
shader_parameter/layers_count = 3

[sub_resource type="Sky" id="Sky_wg7yo"]
sky_material = SubResource("ShaderMaterial_ffi3l")

[sub_resource type="Environment" id="Environment_ierps"]
background_mode = 2
sky = SubResource("Sky_wg7yo")
ambient_light_sky_contribution = 0.0

[node name="HubArea" type="Node3D"]
script = ExtResource("1_jqmyt")

[node name="CentralRoom" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="CentralRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0214252, 0)
mesh = SubResource("SphereMesh_0yvox")
surface_material_override/0 = SubResource("StandardMaterial3D_qssp3")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="CentralRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
shape = SubResource("ConcavePolygonShape3D_eo1ym")

[node name="LucyBorgiya" parent="CentralRoom" instance=ExtResource("3_klcw8")]
transform = Transform3D(-0.611555, 0, -0.791202, 0, 1, 0, 0.791202, 0, -0.611555, 14.3217, 0, 0)

[node name="OmniLight3D2" type="OmniLight3D" parent="CentralRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.8298, 1.603, 0)
light_color = Color(0.705882, 1, 1, 1)

[node name="OmniLight3D3" type="OmniLight3D" parent="CentralRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.7829, 2.54192, 0)
light_color = Color(1, 0.784314, 1, 1)

[node name="Chad" parent="CentralRoom" instance=ExtResource("4_fnbpt")]
transform = Transform3D(0.418041, 0, 0.908428, 0, 1, 0, -0.908428, 0, 0.418041, -15.4182, 0, 0)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="CentralRoom"]
mesh = SubResource("PlaneMesh_w6xti")
surface_material_override/0 = SubResource("StandardMaterial3D_7wvbm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CentralRoom"]
shape = SubResource("ConvexPolygonShape3D_bfqb0")

[node name="OmniLight3D" type="OmniLight3D" parent="CentralRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12933, -15.8247)
light_color = Color(0, 1, 0, 1)

[node name="ScannerHudDebug" parent="." instance=ExtResource("6_ax2ew")]

[node name="TutorialSphere" parent="." instance=ExtResource("7_bewwo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.07612, 0.5, 4.28196)

[node name="CommunicatorDisplay" parent="." instance=ExtResource("8_07gug")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ierps")

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.67459, 0)
light_color = Color(1, 1, 0.94902, 1)
light_indirect_energy = 1.5
omni_range = 22.0
omni_attenuation = 0.0
omni_shadow_mode = 0

[node name="TeleportPad" parent="." instance=ExtResource("10_75c3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12.2267)

[node name="PlayerSpawn" type="Marker3D" parent="."]

[node name="Snaut" parent="." instance=ExtResource("11_yox8q")]
